...
        self.addSubview(self.textView)

        self.textView.isEditable = false
        self.textView.isScrollEnabled = true
        self.textView.backgroundColor = .apptentiveGroupedBackground
        self.textView.dataDetectorTypes = .all
        self.textView.accessibilityIdentifier = "IntroDisclaimerTextView"
        self.textView.isAccessibilityElement = true
        self.textView.adjustsFontForContentSizeCategory = true

        self.landscapeConstraints = [
            self.textView.leadingAnchor.constraint(equalTo: self.readableContentGuide.leadingAnchor),
            self.textView.trailingAnchor.constraint(equalTo: self.readableContentGuide.trailingAnchor),
...
