...
        return mergedConfiguration
    }

    static func defaultConfiguration(appName: String) -> LoveDialogConfiguration {
        let validAppName = Self.defaultIfBlank(appName, to: "us")
        let promptText = "Do you love \(validAppName)?"
        let result = LoveDialogConfiguration(promptText: promptText, affirmativeText: "Yes", negativeText: "Not Yet")

        return result
    }

    static func defaultIfBlank(_ text: String, to defaultText: String) -> String {
        guard !text.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty else {
...
