...
        /// Describes a choice that can be selected for a choice question type.

        public class Choice: Validating {
            /// The label to be shown as part of the choice user interface.
            public let label: AttributedString

            /// The placeholder text for the "Other" text field.
            public let placeholderText: String?

            /// Indicates whether a freeform "Other" text field should be shown for the choice.
            public let supportsOther: Bool

            /// Indicates whether the user has selected this choice.
...
