...

        self.scrollView.isPagingEnabled = true
        self.scrollView.showsHorizontalScrollIndicator = false
        self.scrollView.clipsToBounds = false
        self.indicatorView.tintColor = .apptentiveSubmitButton

        self.nextButton.setTitle("Next", for: .normal)
        self.nextButton.titleLabel?.font = .systemFont(ofSize: 15, weight: .bold)
        self.nextButton.addTarget(self, action: #selector(advance), for: .touchUpInside)

        self.indicatorView.numberOfSegments = self.viewModel.questions.count
    }

...
