...
        if indexPath.section == 0 {
            return super.tableView(tableView, cellForRowAt: indexPath)
        } else {
            let (key, value, keyboardType): (String, String?, UIKeyboardType) = {
                switch indexPath.row {
                case 0:
                    return ("Name", self.apptentive.personName, .default)

                default:
                    return ("Email", self.apptentive.personEmailAddress, .emailAddress)
                }
            }()

            if self.isEditing {
                let cell = tableView.dequeueReusableCell(withIdentifier: "Edit String", for: indexPath) as! EditStringCell

...
